--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="/style.css">
-        <title>Shoes</title>
+        <title>AVALON</title>
     </head>
 
     <body>
@@ -14,9 +14,12 @@
             <img src="img/logo.png" alt="">
             <nav>
                 <ul>
-                    <li><a href="#first">TODOS OS PRODUTOS</a></li>
-                    <li><a href="#second">COLEÇÕES</a></li>
-                    <li><a href="#third">OUTLET</a></li>
+                    <li><a href="#first">PÁGINA INICIAL</a></li>
+                    <li><a href="#second">HOME</a></li>
+                    <li><a href="#third">TODOS OS LIVROS</a></li>
+                    <li><a href="#four">GÊNEROS</a></li>
+                    <li><a href="#five">FALE CONOSCO</a></li>
+                    <li><a href="#six">QUEM SOMOS</a></li>
                 </ul>
             </nav>
         </header>
@@ -101,32 +104,32 @@
 
         <footer>
             <div class="column disclaimer">
-                <img src="img/COMPRAR.png" alt="">
+                <img src="img/logo.png" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl turpis, tincidunt a tortor hendrerit auctor lacinia lorem. Cras et magna
                 </p>
             </div>
             <div class="column categories">
                 <nav>
-                    <h1>categorias</h1>
+                    <h1>Formas de Pagamento</h1>
                     <ul>
-                        <li>sandálias</li>
-                        <li>botas</li>
-                        <li>tênis</li>
-                        <li>oxford</li>
-                        <li>coturnos</li>
+                        <li>Crédito</li>
+                        <li>Débito</li>
+                        <li>Boleto</li>
+                        <li>Pix</li>
+                    
                     </ul>
                 </nav>
             </div>
             <div class="column institucional">
                 <nav>
-                    <h1>institucional</h1>
+                    <h1>Institucional</h1>
                     <ul>
-                        <li>sobre nós</li>
-                        <li>perguntas frequentes</li>
-                        <li>política de privacidade</li>
-                        <li>rastreamentos de pedidos</li>
-                        <li>trabalhe conosco</li>
-                        <li>contato</li>
+                        <li>Sobre nós</li>
+                        <li>Perguntas frequentes</li>
+                        <li>Política de privacidade</li>
+                        <li>Rastreamentos de pedidos</li>
+                        <li>Trabalhe conosco</li>
+                        <li>Contato</li>
                     </ul>
                 </nav>
             </div>
